# llm-tracer

./: AGENTS.md  PLAN.md  README.md  prek.toml  pyproject.toml  test_attachments.py
.agents/instructions/: adapter-examples.instructions.md  markdown-and-customizations.instructions.md  python-quality-gates.instructions.md  scripts-and-permissions.instructions.md  testing-anyio-pytest.instructions.md  tooling-bun-uv.instructions.md
.github/workflows/: ci.yml
examples/adapters/: _common.py  claude_code.py  codex.py  lmstudio.py  local.py  ollama.py  opencode.py  oterm.py  pi_coding_agent.py  vscode.py
examples/fixtures/claude_code/: expected.json
examples/fixtures/claude_code/projects/example-project/: example-session.jsonl
examples/fixtures/codex/: expected.json
examples/fixtures/codex/sessions/2026/05/27/: rollout-2026-05-27T10-00-00-test.jsonl
examples/fixtures/lmstudio/: 1737000000000.conversation.json  conversation.json  expected.json
examples/fixtures/lmstudio/conversations/python-tutorials/: 1737000000000.conversation.json
examples/fixtures/local/: expected.json  session.json  session.jsonl
examples/fixtures/local/workspaceStorage/da3e6382abc1234567890abcdef01234/: workspace.json
examples/fixtures/local/workspaceStorage/da3e6382abc1234567890abcdef01234/chatSessions/: b1c2d3e4-0001-0001-0001-000000000001.jsonl
examples/fixtures/ollama/: expected.json  history
examples/fixtures/opencode/: expected.json  message_001.json  message_002.json  session.json
examples/fixtures/opencode/storage/message/session_001/: msg_001.json  msg_002.json  msg_003.json  msg_004.json
examples/fixtures/opencode/storage/session/llm-tracer/: session_001.json
examples/fixtures/oterm/: expected.json  store.db
examples/fixtures/pi_coding_agent/: expected.json  trace.json
examples/fixtures/pi_coding_agent/sessions/: trace.json
examples/fixtures/vscode/: expected.json  session.json  session.jsonl
examples/fixtures/vscode/workspaceStorage/baed92910affe51bce3aeb07d38a7955/chatSessions/: 03188b43-d8b5-429c-8b70-2cb2ecc29620.jsonl
src/: main.py
src/llm_tracer/: __init__.py  bootstrap.py  cli.py  completion.py  config.py  decisions.py  ingest.py  reprocess.py  review.py  views.py
src/llm_tracer/adapters/: __init__.py  base.py  copilot.py  lmstudio.py  local.py  opencode.py  pi_agent.py  pi_coding_agent.py  vscode.py
src/llm_tracer/adapters/claude_code/: __init__.py
src/llm_tracer/adapters/claude_code/raw/: __init__.py  v2026_01.py
src/llm_tracer/adapters/codex/: __init__.py
src/llm_tracer/adapters/codex/raw/: __init__.py  v2026_01.py
src/llm_tracer/adapters/lmstudio/: __init__.py
src/llm_tracer/adapters/lmstudio/raw/: __init__.py  v2024_01.py
src/llm_tracer/adapters/lmstudio/upstream/: __init__.py  v1.py  v2024_01.py
src/llm_tracer/adapters/ollama/: __init__.py
src/llm_tracer/adapters/opencode/: __init__.py
src/llm_tracer/adapters/opencode/raw/: __init__.py
src/llm_tracer/adapters/opencode/upstream/: __init__.py  v1.py  v2025_01.py  v2025_05.py
src/llm_tracer/adapters/oterm/: __init__.py
src/llm_tracer/adapters/pi_coding_agent/: __init__.py
src/llm_tracer/adapters/pi_coding_agent/raw/: __init__.py  v2025_01.py
src/llm_tracer/adapters/pi_coding_agent/upstream/: __init__.py  v1.py
src/llm_tracer/adapters/vscode/: __init__.py
src/llm_tracer/adapters/vscode/raw/: __init__.py
src/llm_tracer/adapters/vscode/upstream/: __init__.py  v1.py  v3.py
src/llm_tracer/core/: __init__.py  bootstrap.py  config.py  decisions.py  engine.py  git_sync.py  hashing.py  hf_sync.py  ingest.py  schema.py  storage.py  tags.py
src/llm_tracer/core/schema/: __init__.py  v1.py
src/llm_tracer/core/sync/: __init__.py  git.py  hugging_face.py
src/llm_tracer/core/unified/: __init__.py  v1.py
src/llm_tracer/sanitize/: __init__.py  patterns.py  scanner.py  secrets.py
src/llm_tracer/schema/: __init__.py  v1.py
src/llm_tracer/storage/: __init__.py
src/llm_tracer/sync/: __init__.py  hugging_face.py
src/llm_tracer/utils/: __init__.py  hashing.py  tags.py
tests/: test_pipeline_e2e.py  test_tags_contract.py
tests/examples/: __init__.py  test_adapter_examples.py  test_claude_code.py  test_codex.py  test_example_loader.py  test_fixture_rich_payloads.py  test_lmstudio.py  test_local.py  test_ollama.py  test_opencode.py  test_oterm.py  test_pi_coding_agent.py  test_vscode.py
tests/llm_tracer/: __init__.py  test_pipeline_e2e.py
tests/src/: __init__.py
tests/src/llm_tracer/: __init__.py  test_bootstrap.py  test_cli.py  test_config.py  test_decisions.py  test_ingest.py  test_pipeline_e2e.py  test_review.py  test_views.py
tests/src/llm_tracer/adapters/: __init__.py  test_base.py  test_claude_code.py  test_lmstudio.py  test_local.py  test_opencode.py  test_pi_coding_agent.py  test_vscode.py
tests/src/llm_tracer/core/: __init__.py  test_bootstrap.py  test_config.py  test_decisions.py  test_engine.py  test_git_sync.py  test_hashing.py  test_hf_sync.py  test_hugging_face_sync.py  test_ingest.py  test_schema.py  test_storage.py  test_tags.py
tests/src/llm_tracer/sanitize/: __init__.py  test_sanitize.py
tests/src/llm_tracer/schema/: __init__.py  test_schema.py
tests/src/llm_tracer/storage/: __init__.py  test_storage.py
tests/src/llm_tracer/sync/: __init__.py  test_git.py  test_hugging_face.py
tests/src/llm_tracer/utils/: __init__.py  test_hashing.py  test_tags.py
