[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "llm-tracer"
version = "0.0.0"
requires-python = ">=3.14.0"
description = "store and manage LLM traces"
license = { file = "LICENSE.txt" }
readme = "README.md"
dependencies = [
  "anyio>=4.13.0",
  "asyncer>=0.0.17",
  "asyncstdlib>=3.12.0",
  "blake3>=1.0.8",
  "huggingface-hub>=1.17.0",
  "lenses>=1.2.0",
  "pandas>=2.3.0",
  "pyarrow>=22.0.0",
  "pydantic>=2.12.0",
  "typer>=0.20.0",
]


[project.optional-dependencies]
uvloop = [
  "uvloop>=0.22.0; platform_system != 'Windows'",
  "winloop>=0.6.3; platform_system == 'Windows'",
]
presidio = ["presidio-analyzer>=2.2.360", "presidio-anonymizer>=2.2.360"]

[project.scripts]
llm-tracer = "llm_tracer.cli:main"

[project.urls]
repository = "https://github.com/polyipseity/llm-tracer.git"

[dependency-groups]
dev = [
  "hypothesis>=6.155.0",
  "prek>=0.4.3",
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.15",
  "rumdl>=0.2.3",
  "ty>=0.0.40",
]
presidio = ["llm-tracer[presidio]"]
uvloop = ["llm-tracer[uvloop]"]

[tool.pytest.ini_options]
addopts = [
  "--cov=./",
  "--cov-report=term-missing",
  "--dist=loadscope",
  "-n=auto",
  "--strict-markers",
]
testpaths = [".agents/skills/**/tests_*", "tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88
extend-exclude = [
  # self
]

[tool.ruff.lint]
# Enable Pylint-derived rule that disallows imports outside module top-level
# (import-outside-top-level / PLC0415). Ruff 0.12.0+ provides this rule.
extend-select = ["I", "PLC0415"]

[tool.ty.environment]
python-platform = "all"

[tool.ty.rules]
all = "error"

[tool.ty.src]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  ".venv",
  # self
]

[tool.uv]
default-groups = ["dev", "presidio", "uvloop"]
package = true
required-version = ">=0.11.0"

[tool.uv.build-backend]
source-include = ["py.typed"]
