[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[project]
name = "llm-tracer"
version = "0.0.0"
requires-python = ">=3.14.0"
description = "store and manage LLM traces"
license = { file = "LICENSE.txt" }
readme = "README.md"
dependencies = [
  "anyio>=4.14.1",
  "asyncer>=0.0.18",
  "asyncstdlib>=3.12.0",
  "blake3>=1.0.9",
  "huggingface-hub>=1.22.0",
  "lenses>=1.2.0",
  "pandas>=2.3.0",
  "pyarrow>=22.0.0",
  "pydantic>=2.12.0",
  "typer>=0.26.8",
]


[project.optional-dependencies]
uvloop = [
  "uvloop>=0.22.0; platform_system != 'Windows'",
  "winloop>=0.6.3; platform_system == 'Windows'",
]
pii = ["presidio-analyzer>=2.2.363", "presidio-anonymizer>=2.2.363"]
scan = ["detect-secrets>=1.5.0"]

[project.scripts]
llm-tracer = "llm_tracer.cli:main"

[project.urls]
repository = "https://github.com/polyipseity/llm-tracer.git"

[dependency-groups]
dev = [
  "hypothesis>=6.156.1",
  "prek>=0.4.6",
  "pytest>=9.1.1",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.20",
  "rumdl>=0.2.28",
  "ty>=0.0.56",
]
pii = ["llm-tracer[pii]"]
scan = ["llm-tracer[scan]"]
uvloop = ["llm-tracer[uvloop]"]

[tool.pytest.ini_options]
addopts = [
  "--cov=./",
  "--cov-report=term-missing",
  "--dist=loadscope",
  "-n=auto",
  "--strict-markers",
]
testpaths = [".agents/skills/**/tests_*", "tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88
extend-exclude = [
  # self
]

[tool.ruff.lint]
# Enable Pylint-derived rule that disallows imports outside module top-level
# (import-outside-top-level / PLC0415). Ruff 0.12.0+ provides this rule.
extend-select = ["I", "PLC0415"]

[tool.ty.environment]
python-platform = "all"

[tool.ty.rules]
all = "error"

[tool.ty.src]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  ".venv",
  # self
]

[tool.uv]
add-bounds = "exact"
exclude-newer = "P5D"
default-groups = ["dev", "pii", "scan", "uvloop"]
package = true
required-version = ">=0.11.0"

[tool.uv.build-backend]
source-include = ["py.typed"]
